k8s-files/app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-app
  namespace: default
  labels:
    app: ms-app
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: ms-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: ms-app
      annotations:
      labels:
        app: ms-app
    spec:
      tolerations:
      containers:
      - env:
        image: xxxxxxx.dkr.ecr.eu-central-1.amazonaws.com/ms-app:$tag
        imagePullPolicy: IfNotPresent
        name: ms-app
        ports:
        - containerPort: 5000
          name: ms-app
          protocol: TCP
        resources:
          limits:
            cpu: 0.75
            memory: 750Mi
          requests:
            cpu: 0.5
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 10
          failureThreshold: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 10
          failureThreshold: 5
          successThreshold: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
