k8s-files/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-app
  namespace: default
spec:
  ports:
  - name: ms-app
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: ms-app
  sessionAffinity: None
  type: ClusterIP
