k8s-files/app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-app-ing
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-app
            port:
              number: 5000
